[tool.poetry]
name = "blogcache"
version = "0.1.0"
description = "FastAPI blog with Redis caching"
authors = ["Dmitrii Valedibskii <dmvaled@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "blogcache", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
sqlalchemy = "^2.0.48"
asyncpg = "^0.31.0"
redis = "^7.2.1"
alembic = "^1.18.4"
pydantic-settings = "^2.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
mypy = "^1.19.1"
black = "^26.1.0"
isort = "^8.0.1"
ruff = "^0.15.4"
pre-commit = "==4.5.1"
httpx = "^0.28.1"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
 select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "W", # pycodestyle warnings
  "I", # isort
  "B", # flake8-bugbear
  "Q", # flake8-quotes
  "C4", # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
force-sort-within-sections = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
files = "src/"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
